# tunmux

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  manual-build.yml  release.yml
doc/: launchd-socket-activation.md
doc/material/: what IPC pattern and framework would you advise fo.md
etc/: me.pansen.tunmux.autoconnect.plist  me.pansen.tunmux.privileged.plist
issues/: dns-ownership-edge-cases.md
scripts/: tunmux-autoconnect.sh
scripts/hooks/: pre-commit
src/: autoconnect.rs  cli.rs  config.rs  error.rs  launchctl.rs  launchd.rs  lib.rs  local_proxy.rs  logging.rs  main.rs  privileged_api.rs  proxy_stub.rs  userspace_helper.rs
src/airvpn/: handlers.rs
src/ivpn/: handlers.rs
src/mullvad/: handlers.rs
src/privileged/: commands.rs  daemon.rs  dispatch.rs  managed_pids.rs  mod.rs
src/privileged_client/: mod.rs  transport.rs  util.rs
src/proton/: handlers.rs
src/proxy/: mod.rs
src/shared/: connection_ops.rs  hooks.rs  mod.rs  util.rs
src/wgconf/: handlers.rs
src/wireguard/: backend.rs  config.rs  connection.rs  handshake.rs  kernel.rs  mod.rs  userspace.rs  wg_quick.rs
src/wireguard/proxy_tunnel/: bridge.rs  connection.rs  device.rs  dns.rs  http.rs  mod.rs  perf.rs  queue.rs  socks5.rs
