[workspace]
members = ["."]
resolver = "2"

[package]
name = "tunmux"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "tunmux"
path = "src/lib.rs"

[[bin]]
name = "tunmux"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP (hook helpers: connectivity / external-ip checks)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "blocking"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
time = { version = "0.3", features = ["macros"] }

# Randomness (hook instance suffixes)
rand = "0.8"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
# Process/signal/user lookups for the privileged service and helper management.
nix = { version = "0.29", features = ["fs", "signal", "process", "user"] }

# Daemonization and userspace WireGuard
daemonize = "0.5"
gotatun = { version = "0.7.1", features = ["device", "tun"] }
